tests/neg-custom-args/fatal-warnings/i13440.scala
import language.`3.0-migration`

case class A(enum: List[Int] = Nil) // error
